transferred in tangrams

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -6,6 +6,7 @@
 @use "logic";
 @use "light";
 @use "matchstick";
+@use "tangram";
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
 
