--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1116,6 +1116,57 @@ div.matchstick-instructions div.instructions div.display-container svg.nav-butto
   left: min(min(5vw, 5vh), 20px);
 }
 
+div.puzzle-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+div.puzzle-container div.display-container {
+  position: relative;
+}
+div.puzzle-container div.display-container canvas {
+  height: min(67.5vw, 60vh);
+  width: min(90vw, 80vh);
+  border: solid 3px #1e60a6;
+  border-radius: 3vw;
+}
+div.puzzle-container div.display-container canvas.selecting {
+  cursor: pointer;
+}
+div.puzzle-container div.display-container svg.nav-button.reset {
+  fill: #0b032d;
+  cursor: pointer;
+  user-select: none;
+  position: absolute;
+  top: min(5vw, 5vh);
+  left: min(5vw, 5vh);
+  height: 2.5em;
+  width: 2.5em;
+  z-index: 1;
+}
+@media (max-width: 420px) {
+  div.puzzle-container div.display-container svg.nav-button.reset {
+    height: 2em;
+    width: 2em;
+  }
+}
+@media (hover: hover) {
+  div.puzzle-container div.display-container svg.nav-button.reset:hover {
+    fill: #c1b4fa;
+  }
+}
+div.puzzle-container div.display-container svg.nav-button.reset[isactive=false] {
+  cursor: default;
+  fill: #ddd;
+}
+div.puzzle-container div.display-container div.saving-indicator {
+  position: absolute;
+  right: min(5vw, 5vh);
+  bottom: min(5vw, 5vh);
+  color: #888;
+  z-index: -1;
+}
+
 body {
   padding: 1.5em;
   padding-top: 0.5em;
