--- a/src/stylesheets/_logic.scss
+++ b/src/stylesheets/_logic.scss
@@ -1,11 +1,28 @@
+@use "variables";
+@use "sass:color";
+
 div.logic.instance {
 	p.puzzle-description {
 		white-space: pre-wrap;
+		padding: 1em;
+		color: color.adjust(variables.$color3, $lightness: -45);
 	}
 
 	textarea {
+		font-family: inherit;
+		font-weight: lighter;
+		box-sizing: border-box;
+		font-size: 1em;
 		width: 100%;
 		height: 13em;
+		border: solid 3px color.adjust(variables.$color3, $lightness: -30);
+		border-radius: 1em;
+		padding: 1em;
+		background-color: color.adjust(variables.$color3, $lightness: 33);
+
+		&:focus {
+			outline: none;
+		}
 	}
 	div.saving-indicator {
 		text-align: right;
